# answers-to-kaggle-pandas-intro

./: .gitignore  README.md  pyproject.toml
1_creating_reading_writing/: creating_reading_writing.ipynb  excersise.ipynb
2_indexing_selecting_assigning/: indexing_selecting_assigning.ipynb
